add message index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             </div>
           </form>
           <div class="alert alert-success">
-            <p><strong><%= message %></strong></p>
+            <p><strong><%= weather %></strong></p>
           </div>
     </div>
   </div>
