--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Weather App</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/stylesheets/css/main.css">
+  <link rel="stylesheet" href="/stylesheets/css/weather-icons.min.css">
+  <link rel="stylesheet" href="/stylesheets/css/weather-icons-wind.min.css">
+  <link rel="stylesheet" href="/stylesheets/climacon-font/styles.css">
+  <link rel="stylesheet" href="/stylesheets/css/climacon.css">
 </head>
 <body>
 
